fixing home button bug

--- a/Proyectos/U1L3.html
+++ b/Proyectos/U1L3.html
@@ -94,7 +94,7 @@
             En 2006, había aproximadamente 1.3 millones de personas de ascendencia dominicana en los Estados Unidos y en
             más de 300 mil en Puerto Rico contando tanto los nativos y los inmigrantes.</p>
     </div>
-    <a href="/index.html"><button>PAGINA PRINCIPAL</button></a>
+    <a href="../index.html"><button>PAGINA PRINCIPAL</button></a>
 
 
 </body>
