fixing home button bug

--- a/Proyectos/U1L1.html
+++ b/Proyectos/U1L1.html
@@ -19,7 +19,7 @@
     <p style="background-color:rgb(206, 255, 71);">Soy de santiago</p>
     <h1>Lo Que Esperas Lograr Este Verano</h1>
     <p style="background-color:rgb(175, 255, 71);"> Quiero aprender todo lo que se me inparta este verano</p>
-    <a href="/index.html"><button>PAGINA PRINCIPAL</button></a>
+    <a href="../index.html"><button>PAGINA PRINCIPAL</button></a>
 </body>
 
 
