fixing home button bug

--- a/Proyectos/U2.L2.1/Ciudadesycomidas.html
+++ b/Proyectos/U2.L2.1/Ciudadesycomidas.html
@@ -72,7 +72,7 @@
             <li> https://mevoyacanada.org/montreal/comida-tipica-de-montreal/ </li>
         </ul>
     </div>
-    <a href="/index.html"><button>PAGINA PRINCIPAL</button></a>
+    <a href="../index.html"><button>PAGINA PRINCIPAL</button></a>
 </body>
 
 </html>
