--- a/Proyectos/U1ProyectoFinal_Ruth mariel/inicio.html
+++ b/Proyectos/U1ProyectoFinal_Ruth mariel/inicio.html
@@ -18,7 +18,7 @@
         <li> <a href="receta3.html"> Ensalada de Arroz Con Piña Y Maíz</a></li>
         <li> <a href="receta4.html"> Habichuelas Con Dulce Dominicanas </a></li>
     </ul> 
-    <a href="/index.html"><button>PAGINA PRINCIPAL</button></a>   
+    <a href="../index.html"><button>PAGINA PRINCIPAL</button></a>   
 </body>
 
 </html>
