fixing picture bug

--- a/Proyectos/U1ProyectoFinal_Ruth mariel/receta3.html
+++ b/Proyectos/U1ProyectoFinal_Ruth mariel/receta3.html
@@ -11,7 +11,7 @@
         las
         comidas de verano, comidas al aire libre y parrilladas. <br>
     </p>
-    <img src="ensalada de arroz con piña.jpg" width="600" height="500">
+    <img src="ensalada de arroz con pina.jpg" width="600" height="500">
     <div style="background-color: lightblue;">
         <h2 style="color: gray;text-align: center;"> <em> Ingredientes </em> </h2>
         <P>
