two jumps for buttons within two folders

--- a/Proyectos/U2.L3/BobEsponjaShow.html
+++ b/Proyectos/U2.L3/BobEsponjaShow.html
@@ -48,7 +48,7 @@
         Es innegablemente egocéntrica. Intenta ser amable a veces, aunque la mayoría de las veces, cuando es amable, usa
         su bondad para usar a la gente para su beneficio.
     </p>
-    <a href="../index.html"><button>PAGINA PRINCIPAL</button></a>
+    <a href="../../index.html"><button>PAGINA PRINCIPAL</button></a>
 </body>
 
 </html>
