two jumps for buttons within two folders

--- a/Proyectos/U2.L2.1 copy/Tendencia de la moda.html
+++ b/Proyectos/U2.L2.1 copy/Tendencia de la moda.html
@@ -80,7 +80,7 @@
     <ul>
         <li> <a href="Tipos de coleccion de moda .html"> Tipos de colecciones de moda-FASHION ACCESS</a></li>
     </ul>
-    <a href="../index.html"><button>PAGINA PRINCIPAL</button></a>
+    <a href="../../index.html"><button>PAGINA PRINCIPAL</button></a>
 </body>
 
 </html>
